tests/NormalTests/paczka1/small_fuzzy/43949312.err
Error in line 3: Jdsi A619 23,1
Error in line 6: Jdsi S384 41,7
Error in line 7: Jdsi S517 68,1
Error in line 10: A619 S517 32,3
